@@ -35,6 +35,7 @@ import static com.upcoach.upcoachbackend.utils.MyConverter.convertToDatabaseColu
 @Service
 @Transactional
 public class OfferService {
+
     private OfferRepository offerRepository;
     private CoachService coachService;
 
@@ -43,7 +44,7 @@ public class OfferService {
     @PersistenceContext
     private EntityManager entityManager;
 
-    public OfferService(OfferRepository offerRepository, CoachService coachService, @Lazy FileService fileService, @Lazy EntityManager entityManager) {
+    public OfferService(OfferRepository offerRepository, CoachService coachService, @Lazy FileService fileService,@Lazy EntityManager entityManager) {
         this.offerRepository = offerRepository;
         this.coachService = coachService;
         this.fileService = fileService;
@@ -118,7 +119,7 @@ public class OfferService {
         if (coach.getId()!=0){ // equivalent to id != null i guess
             Optional<List<Offer>> offers = offerRepository.findAllByCoachId(coach.getId());
             if (offers.isPresent()){
-                return offers.get().stream().map(OfferDTO::new).collect(Collectors.toList());
+                return offers.get().stream().map(OfferDTO::new).toList();
             }
             return List.of();
         }
@@ -126,7 +127,7 @@ public class OfferService {
         if (coach.getFirstName() != null && coach.getLastName()!=null){
             Optional<List<Offer>> offers =  offerRepository.findAllOffersByCoachFirstNameAndCoachLastName(coach.getFirstName(), coach.getLastName());
             if (offers.isPresent()){
-                return offers.get().stream().map(OfferDTO::new).collect(Collectors.toList());
+                return offers.get().stream().map(OfferDTO::new).toList();
             }
             return List.of();
         }
@@ -171,7 +172,7 @@ public class OfferService {
 
         List<Offer> res = fullTextEntityManager.createFullTextQuery(query, Offer.class).getResultList();
 
-        return res.stream().map(OfferDTO::new).collect(Collectors.toList());
+        return res.stream().map(OfferDTO::new).toList();
     }
 
     public void deleteOffer(long id) {
@@ -194,6 +195,6 @@ public class OfferService {
 
     public List<OfferDTO> getAllOffers() {
         List<Offer> offers =  offerRepository.findAll();
-        return offers.stream().map(OfferDTO::new).collect(Collectors.toList());
+        return offers.stream().map(OfferDTO::new).toList();
     }
 }
